--- a/sass/custom/_layout.sass
+++ b/sass/custom/_layout.sass
@@ -19,3 +19,11 @@
 //$sidebar-pad-medium: 15px;
 //$sidebar-pad-wide: 20px;
 //$sidebar-width-wide: 300px;
+
+.post_icon
+  max-width: 200px
+  margin: 10px 1em
+  +box-shadow( rgba(0,0,0,0.8) 3px 3px, rgba(0,0,0,0.4) 5px 5px)
+  border: solid thin black
+.float_left
+  float: left
