--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,6 +1,5 @@
 <hgroup>
-  <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
-  {% if site.subtitle %}
-    <h2>{{ site.subtitle }}</h2>
-  {% endif %}
+  <a href='/'>
+    <img src='/images/header.png' border=0 />
+  </a>
 </hgroup>
