--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,5 +1,5 @@
 <hgroup>
   <a href='/'>
-    <img src='/images/header.png' border=0 />
+    <img src='/images/Header.png' border=0 />
   </a>
 </hgroup>
