created legacy posts

--- a/sass/custom/_layout.sass
+++ b/sass/custom/_layout.sass
@@ -25,5 +25,9 @@
   margin: 10px 1em
   +box-shadow( rgba(0,0,0,0.8) 3px 3px, rgba(0,0,0,0.4) 5px 5px)
   border: solid thin black
+
 .float_left
   float: left
+  
+.float_right
+  float: right  
