--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,13 @@
 <section>
-  <h1>About Me</h1>
-  <p>A little something about me.</p>
+<h1>About Me</h1>
+  <img src='http://www.gravatar.com/avatar/e77e4b46a99c10734e9078a1fb487a7d.png' style='float: left;' />
+  <p>
+    Hi I'm Yann ARMAND.<br/>
+    Talk me about code, just code.... or food.<br/>
+    Meet me at #ruby drink meetups in #Bordeaux <a href='https://twitter.com/#!/rubybdx'>@rubybdx</a>
+  </p>
+  <p>
+    <a href='https://twitter.com/#!/yarmand'><img src='/images/follow_twitter.png' style='border: 0;'></a>
+    <a href='https://www.facebook.com/yann.armand'><img src='/images/follow_facebook.png' style='border: 0;'></a>
+  </p>
 </section>
