updated header and gravatar

--- a/sass/custom/_styles.sass
+++ b/sass/custom/_styles.sass
@@ -4,7 +4,9 @@
 $dark_red: #622
 
 header[role=banner]
-  background: inherit
+  background: url(/images/Header_back.png)
+  background-size: 100%
+  
 
 .entry-title
   background-color: lightgrey
